ddetect (1.18) UNRELEASED; urgency=low

  * Joey Hess
    - archdetect postinst removed
    - debian-installer/kernel/subarchitecture is no longer supported,
      just run archdetect instead.
    - remove archdetect-deb binary and source as it and archdetect are now
      identical
  * Colin Watson
    - Use DEB_HOST_ARCH_* variables if available so that we work correctly
      with dpkg 1.13.

 -- Joey Hess <joeyh@debian.org>  Sat, 21 May 2005 13:17:10 -0400

ddetect (1.17) unstable; urgency=low

  * Joey Hess
    - Set hw-detect-full priority to optional to match overrides.
  * Colin Watson
    - Tolerate failure of sysfs-update-devnames in ethdetect, to cope with
      old initrds (closes: #308340).
  * Updated translations:
    - Greek, Modern (1453-) (el.po) by Kostas Papadimas
    - Portuguese (Brazil) (pt_BR.po) by Carlos Eduardo Pedroza Santiviago

 -- Colin Watson <cjwatson@debian.org>  Mon,  9 May 2005 22:15:14 +0100

ddetect (1.16) unstable; urgency=low

  * Colin Watson
    - If udev is available, call udevstart at the end of hardware detection
      to make sure that device nodes are created synchronously.
    - Don't break if no modules need to be loaded.
    - Add integration with hotplug:
      + Re-run hotplug rc scripts during hardware detection.
      + Hook into net events so that we can record them for netcfg.
      Requires lspci in udeb form, which isn't yet available (#284110).
  * Joey Hess
    - Allow module parameters to be preseeded on a per-module basis, using
      hw-detect/module_params/$module as the question name.
    - Turn seen flag setting back on after trying to ask the pcmcia start
      question, now that #257180 is fixed. Add a dependency on the version of
      cdebconf that fixed it. Closes: #280025
    - Revert change to force load sunhme, sunbmac, and esp, since a discover1
      patch exists (thought not yet applied), and the change caused nasty
      error messages during the install.
  * Updated translations: 