@@ -1,0 +1,4 @@
+#! /bin/sh
+# No-op hardware detection stub, used on architectures where hardware
+# detection is unavailable.
+exit 0
