@@ -9,6 +9,8 @@ ddetect (1.18) UNRELEASED; urgency=low
   * Colin Watson
     - Use DEB_HOST_ARCH_* variables if available so that we work correctly
       with dpkg 1.13.
+    - hw-detect and ethdetect are entirely Linux-specific, so make them do
+      nothing on the Hurd for now.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 21 May 2005 13:17:10 -0400
 
